fixed elements position on smaller devices

--- a/src/styles/_consultation.scss
+++ b/src/styles/_consultation.scss
@@ -21,13 +21,22 @@
     width: 413px;
   }
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: $small-scree-breakpoint) {
     flex-direction: column;
+    align-items: center;
 
     &__text {
+      align-self: center;
       margin-bottom: 32px;
     }
 
+    &__text,
+    &__form {
+      width: 70%;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
     &__text,
     &__form {
       width: 100%;
