--- a/src/styles/_info.scss
+++ b/src/styles/_info.scss
@@ -2,6 +2,7 @@
 
 .info {
   display: flex;
+  align-items: center;
   justify-content: space-between;
 
   &__headline {
@@ -44,7 +45,12 @@
     &__headline {
       margin-bottom: 48px;
 
+      text-align: left;
       font-size: 36px;
     }
+  }
+
+  @media screen and (max-width: 400px) {
+    align-items: flex-start;
   }
 }
