--- a/src/styles/_person.scss
+++ b/src/styles/_person.scss
@@ -1,6 +1,7 @@
 @import "variables";
 
 .person {
+  width: 200px;
   text-align: center;
 
   &__photo {
@@ -24,5 +25,13 @@
 
   &__position {
     @extend .small-text;
+  }
+
+  @media screen and (max-width: $small-scree-breakpoint) {
+    margin-bottom: 100px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
