--- a/src/styles/_testimonials.scss
+++ b/src/styles/_testimonials.scss
@@ -1,6 +1,11 @@
+@import "variables";
+
 .testimonials {
-  display: grid;
-  grid-gap: 150px;
-  grid-template-columns: repeat(auto-fill, 200px);
-  justify-content: center;
+  display: flex;
+  justify-content: space-between;
+
+  @media screen and (max-width: 860px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
