--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $small-logo-width: 73px;
 $small-logo-height: 48px;
 $crown-width: 23px;
 
-$small-scree-breakpoint: 820px;
+$small-scree-breakpoint: 860px;
 
 $hover-duration: 0.3s;
 
